--- a/Labguide/03.html
+++ b/Labguide/03.html
@@ -10,6 +10,7 @@
   <script src="jquery-3.5.1.min.js"></script>
   <script src="clipboard.min.js"></script>
   <script src="velocity.min.js"></script>
+  <link rel="stylesheet" href="font-awesome.min.css" />
 <style>
 /* Based on Flatly from Bootswatch (https://bootswatch.com/flatly/) */
 @import url("//fonts.googleapis.com/css?family=Lato:400,700,400italic");
