--- a/Labguide/12.html
+++ b/Labguide/12.html
@@ -666,7 +666,7 @@ touch ~/workspace/helm-charts/pages/charts/mysql/templates/_helpers.tpl</code></
 <p>Patch the name field for <code>pages/charts/mysql/templates/storage-class.yaml</code></p>
 <div class="listingblock">
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="yaml"><span style="color:#606">name</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">{{ include &quot;mysql.fullname&quot; . }}</span></span></code></pre>
+<pre class="CodeRay highlight"><code data-lang="yaml"><span style="color:#606">name</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">{{ include &quot;mysql.fullname&quot; . }}-{{ .Release.Namespace }}</span></span></code></pre>
 </div>
 </div>
 </li>
