--- a/Labguide/14.html
+++ b/Labguide/14.html
@@ -401,6 +401,24 @@ Here we would be leveraging <code>GitHub Actions</code>.</p>
 </li>
 </ul>
 </div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_setting_up_the_codebase">Setting up the codebase</h2>
+<div class="sectionbody">
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>Create a repository called <code>helm-charts</code> in your GitHub account. You will need to initialize the local codebase as a git repo &amp; add your remote repository url prior to executing any commits on it</p>
+<div class="listingblock">
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="java">git init
+git remote add origin https:<span style="color:#777">//github.com/[your-github-user-name]/helm-charts.git</span></code></pre>
+</div>
+</div>
+</li>
+</ol>
+</div>
 <div class="sect2">
 <h3 id="_directory_structure">Directory Structure</h3>
 <div class="olist arabic">
@@ -409,7 +427,26 @@ Here we would be leveraging <code>GitHub Actions</code>.</p>
 <p>Pipeline design is the most important factor to consider before implementing CI/CD as it is highly dependent on the deployment strategy and cluster envinronment which tends to vary from one project to another.</p>
 </li>
 <li>
-<p>DevOps team would like to have a pipeline designed as follows:</p>
+<p>DevOps team would like to have a pipeline designed with the following tasks/jobs:</p>
+<div class="olist loweralpha">
+<ol class="loweralpha" type="a">
+<li>
+<p>Test the chart syntax</p>
+</li>
+<li>
+<p>Test the application</p>
+</li>
+<li>
+<p>Install the necessary softwares such as <code>kubectl</code>, <code>helm</code></p>
+</li>
+<li>
+<p>Setup <code>kubeconfig</code> to point to <code>staging</code> environment cluster</p>
+</li>
+<li>
+<p>Deploy to the staging environment</p>
+</li>
+</ol>
+</div>
 </li>
 <li>
 <p>Create the directory structure required for github actions inside <code>helm-charts</code> directory</p>
@@ -430,7 +467,7 @@ mkdir ~/workspace/helm-charts/scripts</code></pre>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Create the script files for installing kubectl cli, installing helm, and deploying the chart to the cluster.</p>
+<p>Create the script files for installing <code>kubect`l cli, installing `helm</code>, and deploying the chart to the cluster.</p>
 <div class="listingblock">
 <div class="content">
 <pre class="CodeRay highlight"><code data-lang="shell script">touch ~/workspace/helm-charts/scripts/install-kubectl.sh
