--- a/Labguide/07.html
+++ b/Labguide/07.html
@@ -601,7 +601,7 @@ kubectl get pods</code></pre>
             <span style="color:#606">name</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">job-6</span></span>
             <span style="color:#606">imagePullPolicy</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">IfNotPresent</span></span>
             <span style="color:#606">command</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">[&quot;/bin/sh&quot;]</span></span>
-            <span style="color:#606">args</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">[&quot;-c&quot;,&quot;Time: 3.30 pm. It is break time. Lets stretch out a bit or have a coffee!&quot;]</span></span>
+            <span style="color:#606">args</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">[&quot;-c&quot;,&quot;echo Time: 3.30 pm. It is break time. Lets stretch out a bit or have a coffee!&quot;]</span></span>
             <span style="color:#606">volumeMounts</span>:
               - <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">name: tz-config</span></span>
                 <span style="color:#606">mountPath</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">/etc/localtime</span></span>
