--- a/Labguide/11.html
+++ b/Labguide/11.html
@@ -506,7 +506,7 @@ table {
     <span style="color:#606">storage</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">3Gi</span></span>
   <span style="color:#606">accessMode</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">ReadWriteMany</span></span>
   <span style="color:#606">hostPath</span>:
-    <span style="color:#606">path</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#710">&quot;</span><span style="color:#D20">/var/lib/mysql/dev</span><span style="color:#710">&quot;</span></span>
+    <span style="color:#606">path</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#710">&quot;</span><span style="color:#D20">/var/lib/mysql/[replace-this-with-your-namespace]</span><span style="color:#710">&quot;</span></span>
 <span style="color:#606">pvc</span>:
   <span style="color:#606">resources</span>:
     <span style="color:#606">requests</span>:
