--- a/Labguide/07-Pages-Curl-Commands.html
+++ b/Labguide/07-Pages-Curl-Commands.html
@@ -378,31 +378,31 @@ table {
 <div class="listingblock">
 <div class="title">Create a page</div>
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="java">curl -i -XPOST -H<span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#710">&quot;</span><span style="color:#D20">Content-Type: application/json</span><span style="color:#710">&quot;</span></span> localhost:<span style="color:#00D">8080</span>/pages -d<span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#710">&quot;</span><span style="color:#D20">{</span><span style="color:#b0b">\&quot;</span><span style="color:#D20">businessName</span><span style="color:#b0b">\&quot;</span><span style="color:#D20">: </span><span style="color:#b0b">\&quot;</span><span style="color:#D20">Uber</span><span style="color:#b0b">\&quot;</span><span style="color:#D20">, </span><span style="color:#b0b">\&quot;</span><span style="color:#D20">address</span><span style="color:#b0b">\&quot;</span><span style="color:#D20">: </span><span style="color:#b0b">\&quot;</span><span style="color:#D20">SanFrancisco, CA, USA</span><span style="color:#b0b">\&quot;</span><span style="color:#D20">, </span><span style="color:#b0b">\&quot;</span><span style="color:#D20">categoryId</span><span style="color:#b0b">\&quot;</span><span style="color:#D20">: 123, </span><span style="color:#b0b">\&quot;</span><span style="color:#D20">contactNumber</span><span style="color:#b0b">\&quot;</span><span style="color:#D20">: </span><span style="color:#b0b">\&quot;</span><span style="color:#D20">0045987869</span><span style="color:#b0b">\&quot;</span><span style="color:#D20">}</span><span style="color:#710">&quot;</span></span></code></pre>
+<pre class="CodeRay highlight"><code data-lang="shell script">curl -i -XPOST -H&quot;Content-Type: application/json&quot; localhost:8080/pages -d&quot;{\&quot;businessName\&quot;: \&quot;Uber\&quot;, \&quot;address\&quot;: \&quot;SanFrancisco, CA, USA\&quot;, \&quot;categoryId\&quot;: 123, \&quot;contactNumber\&quot;: \&quot;0045987869\&quot;}&quot;</code></pre>
 </div>
 </div>
 <div class="listingblock">
 <div class="title">Get a page by ID</div>
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="java">curl -i localhost:<span style="color:#00D">8080</span>/pages/<span style="color:#F00;background-color:#FAA">$</span>{PAGE_ID}</code></pre>
+<pre class="CodeRay highlight"><code data-lang="shell script">curl -i localhost:8080/pages/${PAGE_ID}</code></pre>
 </div>
 </div>
 <div class="listingblock">
 <div class="title">Update a page by ID</div>
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="java">curl -i -XPUT -H<span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#710">&quot;</span><span style="color:#D20">Content-Type: application/json</span><span style="color:#710">&quot;</span></span> localhost:<span style="color:#00D">8080</span>/pages/<span style="color:#F00;background-color:#FAA">$</span>{PAGE_ID} -d<span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#710">&quot;</span><span style="color:#D20">{</span><span style="color:#b0b">\&quot;</span><span style="color:#D20">businessName</span><span style="color:#b0b">\&quot;</span><span style="color:#D20">: </span><span style="color:#b0b">\&quot;</span><span style="color:#D20">Uber Technologies</span><span style="color:#b0b">\&quot;</span><span style="color:#D20">, </span><span style="color:#b0b">\&quot;</span><span style="color:#D20">address</span><span style="color:#b0b">\&quot;</span><span style="color:#D20">: </span><span style="color:#b0b">\&quot;</span><span style="color:#D20">SanFrancisco, CA, USA</span><span style="color:#b0b">\&quot;</span><span style="color:#D20">, </span><span style="color:#b0b">\&quot;</span><span style="color:#D20">categoryId</span><span style="color:#b0b">\&quot;</span><span style="color:#D20">: 123, </span><span style="color:#b0b">\&quot;</span><span style="color:#D20">contactNumber</span><span style="color:#b0b">\&quot;</span><span style="color:#D20">: </span><span style="color:#b0b">\&quot;</span><span style="color:#D20">0045987869</span><span style="color:#b0b">\&quot;</span><span style="color:#D20">}</span><span style="color:#710">&quot;</span></span></code></pre>
+<pre class="CodeRay highlight"><code data-lang="shell script">curl -i -XPUT -H&quot;Content-Type: application/json&quot; localhost:8080/pages/${PAGE_ID} -d&quot;{\&quot;businessName\&quot;: \&quot;Uber Technologies\&quot;, \&quot;address\&quot;: \&quot;SanFrancisco, CA, USA\&quot;, \&quot;categoryId\&quot;: 123, \&quot;contactNumber\&quot;: \&quot;0045987869\&quot;}&quot;</code></pre>
 </div>
 </div>
 <div class="listingblock">
 <div class="title">List all pages</div>
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="java">curl -i localhost:<span style="color:#00D">8080</span>/pages</code></pre>
+<pre class="CodeRay highlight"><code data-lang="shell script">curl -i localhost:8080/pages</code></pre>
 </div>
 </div>
 <div class="listingblock">
 <div class="title">Delete a page by ID</div>
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="java">curl -i -XDELETE -H<span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#710">&quot;</span><span style="color:#D20">Content-Type: application/json</span><span style="color:#710">&quot;</span></span> localhost:<span style="color:#00D">8080</span>/pages/<span style="color:#F00;background-color:#FAA">$</span>{PAGE_ID}</code></pre>
+<pre class="CodeRay highlight"><code data-lang="shell script">curl -i -XDELETE -H&quot;Content-Type: application/json&quot; localhost:8080/pages/${PAGE_ID}</code></pre>
 </div>
 </div>
 </div>
