--- a/Labguide/08.html
+++ b/Labguide/08.html
@@ -519,9 +519,9 @@ Without doing that, you might end up creating it in a difference namespace.</p>
   <span style="color:#606">hard</span>:
     <span style="color:#F00;background-color:#FAA">pods:5</span>
     <span style="color:#606"><span style="color:#404">&quot;</span><span>requests.cpu</span><span style="color:#404">&quot;</span></span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#710">&quot;</span><span style="color:#D20">2</span><span style="color:#710">&quot;</span></span>
-    <span style="color:#606"><span style="color:#404">&quot;</span><span>requests.memory</span><span style="color:#404">&quot;</span></span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">1024m</span></span>
+    <span style="color:#606"><span style="color:#404">&quot;</span><span>requests.memory</span><span style="color:#404">&quot;</span></span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">1024Mi</span></span>
     <span style="color:#606"><span style="color:#404">&quot;</span><span>limits.cpu</span><span style="color:#404">&quot;</span></span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#710">&quot;</span><span style="color:#D20">4</span><span style="color:#710">&quot;</span></span>
-    <span style="color:#606"><span style="color:#404">&quot;</span><span>limits.memory</span><span style="color:#404">&quot;</span></span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">2048m</span></span></code></pre>
+    <span style="color:#606"><span style="color:#404">&quot;</span><span>limits.memory</span><span style="color:#404">&quot;</span></span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">2048Mi</span></span></code></pre>
 </div>
 </div>
 <div class="listingblock">
