--- a/Labguide/03.html
+++ b/Labguide/03.html
@@ -416,25 +416,35 @@ the most commonly used kubernetes commands and concepts to ramp up your kubernet
 </li>
 </ol>
 </div>
-<div class="admonitionblock note">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-note" title="Note"></i>
-</td>
-<td class="content">
-<div class="paragraph">
-<p>Create all manifest resources in the directory <code>~/workspace/kubernetes-manifests/competencies</code>. Watch out for the right file names in the solution section.</p>
 </div>
-</td>
-</tr>
-</table>
+<div class="sect2">
+<h3 id="_setup_the_working_directory">Setup the working directory</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Create all manifest resources in the directory <code>~/workspace/kubernetes-manifests/competencies</code>. Watch out for the right file names in the solution section.</p>
+<div class="listingblock">
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="shell script">mkdir -p ~/workspace/kubernetes-manifests/competencies
+cd ~/workspace/kubernetes-manifests</code></pre>
+</div>
+</div>
+</li>
+</ul>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_advanced_configuration_custom_commands">Advanced Configuration &amp; Custom Commands</h3>
 <div class="olist arabic">
 <ol class="arabic">
+<li>
+<p>Create the directory <code>pods</code> inside <code>competencies</code></p>
+<div class="listingblock">
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="shell script">mkdir ~/workspace/kubernetes-manifests/competencies/pods</code></pre>
+</div>
+</div>
+</li>
 <li>
 <p>Create a busybox pod which prints "Hello from pages Yellow Pages" on the console using manifest file.</p>
 <details>
@@ -577,60 +587,12 @@ localhost:8080 {from the browser}</code></pre>
 </div>
 <div class="listingblock">
 <div class="content">
+<pre class="CodeRay highlight"><code data-lang="shell script">kubectl logs busybox -f</code></pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="content">
 <pre class="CodeRay highlight"><code data-lang="shell script">kubectl delete po busybox</code></pre>
-</div>
-</div>
-</div>
-</details>
-</li>
-<li>
-<p>Create an nginx pod imperatively and test it in the browser or using curl command</p>
-<details>
-<summary class="title">Click to see solution</summary>
-<div class="content">
-<div class="listingblock">
-<div class="content">
-<pre class="CodeRay highlight"><code data-lang="shell script">kubectl run nginx --image=nginx --image-pull-policy=IfNotPresent
-
-kubectl port-forward pod/nginx 8080:80</code></pre>
-</div>
-</div>
-<div class="listingblock">
-<div class="content">
-<pre class="CodeRay highlight"><code data-lang="shell script">curl localhost:8080</code></pre>
-</div>
-</div>
-<div class="listingblock">
-<div class="content">
-<pre class="CodeRay highlight"><code data-lang="shell script">kubectl delete po nginx</code></pre>
-</div>
-</div>
-</div>
-</details>
-</li>
-<li>
-<p>Create a busybox pod which prints the <code>current date</code> on the console</p>
-<details>
-<summary class="title">Click to see solution</summary>
-<div class="content">
-<div class="paragraph">
-<p><code>~/workspace/kubernetes-manifests/competencies/pods/6.yaml</code></p>
-</div>
-<div class="listingblock">
-<div class="content">
-<pre class="CodeRay highlight"><code data-lang="yaml"><span style="color:#606">apiVersion</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">v1</span></span>
-<span style="color:#606">kind</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">Pod</span></span>
-<span style="color:#606">metadata</span>:
-  <span style="color:#606">labels</span>:
-    <span style="color:#606">run</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">busybox</span></span>
-  <span style="color:#606">name</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">busybox</span></span>
-<span style="color:#606">spec</span>:
-  <span style="color:#606">containers</span>:
-    - <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">image: busybox</span></span>
-      <span style="color:#606">name</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">busybox</span></span>
-      <span style="color:#606">imagePullPolicy</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">IfNotPresent</span></span>
-      <span style="color:#606">command</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">[&quot;/bin/sh&quot;]</span></span>
-      <span style="color:#606">args</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">[&quot;-c&quot;,&quot;date&quot;]</span></span></code></pre>
 </div>
 </div>
 </div>
@@ -659,6 +621,23 @@ kubectl port-forward pod/nginx 8080:80</code></pre>
       <span style="color:#606">imagePullPolicy</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">IfNotPresent</span></span>
       <span style="color:#606">command</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">[&quot;/bin/sh&quot;]</span></span>
       <span style="color:#606">args</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">[&quot;-c&quot;,&quot;while true;do date;sleep 10;done&quot;]</span></span></code></pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="shell script">kubectl apply -f ~/workspace/kubernetes-manifests/competencies/pods/7.yaml
+
+kubectl get po busybox</code></pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="shell script">kubectl logs busybox -f</code></pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="shell script">kubectl delete po busybox</code></pre>
 </div>
 </div>
 </div>
@@ -810,6 +789,11 @@ first request after 5 seconds and check if port 80 is accessible. Hint: use ngin
 </div>
 <div class="listingblock">
 <div class="content">
+<pre class="CodeRay highlight"><code data-lang="shell script">kubectl describe po nginx | grep -i readiness</code></pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="content">
 <pre class="CodeRay highlight"><code data-lang="shell script">kubectl delete po nginx</code></pre>
 </div>
 </div>
@@ -857,6 +841,11 @@ first request after 5 seconds and check if port 80 is accessible. Hint: use ngin
 <div class="listingblock">
 <div class="content">
 <pre class="CodeRay highlight"><code data-lang="shell script">kubectl get po nginx -w</code></pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="shell script">kubectl describe po nginx | grep -i ness</code></pre>
 </div>
 </div>
 <div class="listingblock">
@@ -911,6 +900,11 @@ first request after 5 seconds and check if port 80 is accessible. Hint: use ngin
 </div>
 <div class="listingblock">
 <div class="content">
+<pre class="CodeRay highlight"><code data-lang="shell script">kubectl describe po pages | grep -i ness</code></pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="content">
 <pre class="CodeRay highlight"><code data-lang="shell script">kubectl delete po pages</code></pre>
 </div>
 </div>
@@ -927,6 +921,14 @@ first request after 5 seconds and check if port 80 is accessible. Hint: use ngin
 <div class="sectionbody">
 <div class="olist arabic">
 <ol class="arabic">
+<li>
+<p>Create the directory <code>volumes</code> inside <code>competencies</code></p>
+<div class="listingblock">
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="shell script">mkdir ~/workspace/kubernetes-manifests/competencies/volumes</code></pre>
+</div>
+</div>
+</li>
 <li>
 <p>Mount a directory <code>/var/output</code> to the container which writes the current date to a file called <code>log.txt</code> inside the mounted directory <code>/var/output</code> for every <code>5 seconds</code>. The directory should reside inside the pod and should cease to exist once the pod terminates.</p>
 <div class="dlist">
